{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 66,
  "lineage": "5343dd3f-c445-275b-44bb-9edf5332a576",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e7496b571807c229",
            "arn": "arn:aws:ec2:ap-northeast-1:510784251077:elastic-ip/eipalloc-0e7496b571807c229",
            "association_id": "eipassoc-01cd2eb2d66c5c7b0",
            "domain": "vpc",
            "id": "eipalloc-0e7496b571807c229",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0e2cadfc452e9397d",
            "private_dns": "ip-192-168-1-98.ap-northeast-1.compute.internal",
            "private_ip": "192.168.1.98",
            "public_dns": "ec2-18-177-42-54.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.177.42.54",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pe_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-054400ced365b82a0",
            "arn": "arn:aws:ec2:ap-northeast-1:510784251077:instance/i-05739dfd9b1f219e3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05739dfd9b1f219e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "the_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07e0915c1fafdea0d",
            "private_dns": "ip-192-168-1-129.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.129",
            "public_ip": "54.250.98.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08e9b366479c73db6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0518957c332b168a8",
              "sg-090e7af1ee0614fd5",
              "sg-0db68a1738cb97f92"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f13732b2ed20e7d",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0518957c332b168a8",
              "sg-090e7af1ee0614fd5",
              "sg-0db68a1738cb97f92"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ssher",
            "aws_security_group.http_sg",
            "aws_security_group.https_sg",
            "aws_security_group.ssh_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.pe_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pe_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:510784251077:internet-gateway/igw-0b5bfe3fd97f4fb1a",
            "id": "igw-0b5bfe3fd97f4fb1a",
            "owner_id": "510784251077",
            "tags": {
              "Name": "PE IGW"
            },
            "tags_all": {
              "Name": "PE IGW"
            },
            "vpc_id": "vpc-00d0e044e5e10a835"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pe_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e7496b571807c229",
            "association_id": "eipassoc-01cd2eb2d66c5c7b0",
            "connectivity_type": "public",
            "id": "nat-05286f149a3c573ac",
            "network_interface_id": "eni-0e2cadfc452e9397d",
            "private_ip": "192.168.1.98",
            "public_ip": "18.177.42.54",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07f13732b2ed20e7d",
            "tags": {
              "Name": "PE NAT"
            },
            "tags_all": {
              "Name": "PE NAT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public_subnet",
            "aws_vpc.pe_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:510784251077:route-table/rtb-088b71074d021acd3",
            "id": "rtb-088b71074d021acd3",
            "owner_id": "510784251077",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b5bfe3fd97f4fb1a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d0e044e5e10a835"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.pe_igw",
            "aws_vpc.pe_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c651a71f7980a878",
            "route_table_id": "rtb-088b71074d021acd3",
            "subnet_id": "subnet-07f13732b2ed20e7d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.pe_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.pe_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:510784251077:security-group/sg-0518957c332b168a8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0518957c332b168a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250716041116355900000002",
            "name_prefix": "terraform-",
            "owner_id": "510784251077",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTP"
            },
            "tags_all": {
              "Name": "Allow HTTP"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d0e044e5e10a835"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pe_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "https_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:510784251077:security-group/sg-090e7af1ee0614fd5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090e7af1ee0614fd5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20250716044724795200000001",
            "name_prefix": "terraform-",
            "owner_id": "510784251077",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTPS"
            },
            "tags_all": {
              "Name": "Allow HTTPS"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d0e044e5e10a835"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pe_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:510784251077:security-group/sg-0db68a1738cb97f92",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db68a1738cb97f92",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250716041116355900000001",
            "name_prefix": "terraform-",
            "owner_id": "510784251077",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow SSH"
            },
            "tags_all": {
              "Name": "Allow SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d0e044e5e10a835"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pe_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:510784251077:subnet/subnet-07f13732b2ed20e7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f13732b2ed20e7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "510784251077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PE Public Subnet"
            },
            "tags_all": {
              "Name": "PE Public Subnet"
            },
            "vpc_id": "vpc-00d0e044e5e10a835"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pe_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pe_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:510784251077:vpc/vpc-00d0e044e5e10a835",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-084eadacb6a75bb15",
            "default_route_table_id": "rtb-09e20183b2bddceca",
            "default_security_group_id": "sg-0753b2b1029ba653b",
            "dhcp_options_id": "dopt-0db5fa52fbffa8204",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00d0e044e5e10a835",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e20183b2bddceca",
            "owner_id": "510784251077",
            "tags": {
              "Name": "PE VPC"
            },
            "tags_all": {
              "Name": "PE VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}